# libbpl_dndbeyond

./: CMakeLists.txt  README.md
dndbeyond_overlay/: CMakeLists.txt
dndbeyond_overlay/resources/images/: LICENSE.gameart2d.txt
dndbeyond_overlay/resources/overlays/: player-overview.json
dndbeyond_overlay/src/: Debug.h  OverlayUpdater.cpp  OverlayUpdater.h  dndbeyondapp.cpp
libbpl_dndbeyond/: CMakeLists.txt
libbpl_dndbeyond/include/bpl/dndbeyond/: Api.h  CharacterData.h
libbpl_dndbeyond/include/bpl/dndbeyond/api/: Class.h  Classes.h  Data.h  Decorations.h  Inventory.h  InventoryItem.h  InventoryItemDefinition.h  Response.h  Stats.h
libbpl_dndbeyond/src/: Api.cpp  CharacterData.cpp  Debug.h
libbpl_dndbeyond/src/api/: Class.cpp  Classes.cpp  Data.cpp  Decorations.cpp  Inventory.cpp  InventoryItem.cpp  InventoryItemDefinition.cpp  Response.cpp  Stats.cpp
